# librespot-node

./: .gitignore  .pnp.cjs  .yarnrc.yml  Cargo.toml  README.md  package.json  test.ts  tsconfig.json  webpack.config.js
docs/: index.html  modules.html
docs/assets/: highlight.css  search.js
docs/classes/: SpotifyPlayer.html  SpotifyPlayerSpirc.html
docs/interfaces/: Artist.html  AuthDetails.html  CacheConfig.html  Canvaz.html  CanvazResponse.html  Colors.html  ConnectConfig.html  ConstructorConfig.html  Line.html  Lyrics.html  LyricsResponse.html  NormalizationConfig.html
docs/types/: PlayerEvent.html  PlayerEventTypes.html  Token.html  TokenScope.html
native/: Cargo.toml
native/src/: canvaz.rs  config.rs  js_player.rs  js_player_spirc.rs  lib.rs  player.rs  utils.rs
src/: genericPlayer.ts  index.ts  js_player.rs  lib.rs  player.rs  player.ts  spirc.ts  tokenHandler.ts  types.ts  utils.rs  utils.ts
types/: index.d.ts
