[package]
name = "librespot-node"
version = "0.1.0"
authors = ["Nadav Tau <nadavt@gmail.com>", "Sahil Gupte <ovenoboyo@gmail.com>"]
license = "MIT"
exclude = ["index.node"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
log = { version = "^0.4.5", features = ["std"] }
simple-logging = "2.0.1"
futures = "0.3.25"
librespot = "0.4.2"
hex = "0.4.3"
sha1 = "0.10.5"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]

